# Nodes

./: CMakeLists.txt  LICENSE  README.md  config.h.in
src/: CMakeLists.txt  main.cpp  node.cpp  node.h  nodetree.cpp  nodetree.h  properties.h  socket.cpp  socket.h  types.h
src/nodes/: addnode.cpp  addnode.h  groupnode.cpp  groupnode.h  numbernode.cpp  numbernode.h  outputnode.cpp  outputnode.h
